--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.apiman</groupId>
   <artifactId>apiman-quickstarts</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
   <name>apiman-quickstarts</name>
   <packaging>pom</packaging>
 
@@ -75,6 +75,8 @@
 
   <modules>
     <module>echo-service</module>
+    <module>plugin</module>
+    <module>plugin-with-deps</module>
   </modules>
 
   <build>
