--- a/echo-service/pom.xml
+++ b/echo-service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.apiman</groupId>
     <artifactId>apiman-quickstarts</artifactId>
-    <version>1.0.3.Final</version>
+    <version>1.0.4-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>apiman-quickstarts-echo-service</artifactId>
