--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.apiman</groupId>
   <artifactId>apiman-quickstarts</artifactId>
-  <version>1.0.3.Final</version>
+  <version>1.0.4-SNAPSHOT</version>
   <name>apiman-quickstarts</name>
   <packaging>pom</packaging>
 
